Este repositório contém um exemplo de um CRUD (Create, Read, Update, Delete) simples implementado em Python e executado no Google Colab.

--- a/TesteCRUDPython.ipynb
+++ b/TesteCRUDPython.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJG6kYz1BW9ytRAwo4G/Bb",
+      "authorship_tag": "ABX9TyNme54lBGDclrdw3Mxn+GzH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Criando Tabela\n"
+        "#Criando a Tabela\n"
       ],
       "metadata": {
         "id": "Y_9Sym4ANeTz"
@@ -100,9 +100,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Chamando a função para criar a tabela\n"
+      ],
+      "metadata": {
+        "id": "PCGcElJqOT6d"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Chamando a função para criar a tabela\n",
         "criar_tabela()\n"
       ],
       "metadata": {
